src/test/ui/borrowck/borrowck-vec-pattern-move-tail.ast.stderr
error[E0506]: cannot assign to `a[..]` because it is borrowed
  --> $DIR/borrowck-vec-pattern-move-tail.rs:24:5
   |
LL |         [1, 2, ref tail..] => tail,
   |                -------- borrow of `a[..]` occurs here
...
LL |     a[2] = 0; //[ast]~ ERROR cannot assign to `a[..]` because it is borrowed
   |     ^^^^^^^^ assignment to borrowed `a[..]` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
